fix: don't wrap tree entries

--- a/apps/frontend/src/app/shell/nav/nav.component.css
+++ b/apps/frontend/src/app/shell/nav/nav.component.css
@@ -42,3 +42,7 @@ mat-sidenav {
 mat-sidenav-content {
   flex-grow: 1;
 }
+
+mat-nav-list {
+  overflow: hidden;
+}
